[package]
name = "headcrab-dap"
version = "0.1.0"
authors = ["FlyingCanoe <flyingcanoe@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
serde = "1.0.127"

[dev-dependencies]
log4rs = "1.0.0"
log = "0.4.14"
bstr = "0.2.16"